[package]
name = "blob-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
beacon-api-client = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "0d085c4e1a73bf8f321345ce720edee426c1df6d" }
blst = "0.3.11"
clap = { version = "4.3.21", features = ["derive"] }
c-kzg = { git = "https://github.com/jacobkaufmann/c-kzg-4844", branch = "jtraglia-das" }
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "0d085c4e1a73bf8f321345ce720edee426c1df6d" }
url = "2.4.1"
tokio = "1.32.0"
tokio-stream = "0.1.14"
serde = { version = "1.0.188", features = ["std", "derive"] }
ssz_rs = "0.9.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
